--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,19 @@
             <artifactId>maven-jxr-plugin</artifactId>
             <version>2.3</version>
         </plugin>
+        
+        <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>2.17</version>
+          <reportSets>
+            <reportSet>
+             <reports>
+                <report>checkstyle</report>
+              </reports>
+            </reportSet>
+            </reportSets>
+        </plugin>
 	</plugins>
 </reporting>
 
